Business overseas prep content and images added. Navbar across all pages adjusted to reflect change. FAQ content added on pricing page and icons changed.

--- a/about.html
+++ b/about.html
@@ -153,8 +153,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
+								<a href="lesson-course-everyday.html">
+									海外赴任準備
 								</a>
 							</li>
 							<li>
@@ -173,13 +173,13 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									英文校正サービス
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									海外赴任準備
+								<a href="lesson-course-corporate.html">
+									英文校正サービス
 								</a>
 							</li>
 							<li>
