--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -150,8 +150,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
+								<a href="lesson-course-everyday.html">
+									海外赴任準備
 								</a>
 							</li>
 							<li>
@@ -170,7 +170,12 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-corporate.html">
 									英文校正サービス
 								</a>
 							</li>
@@ -229,7 +234,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">日常英会話・ビジネス英会話</h1>
+					<h1 class="title">日常英会話・ビジネス英会話・海外赴任準備</h1>
 				</div>
 			</div>
 		</div>
@@ -248,7 +253,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">日常英会話・ビジネス英会話</h2>
+							<h2 class="title">日常英会話・ビジネス英会話・海外赴任準備</h2>
 						</div>
 					</div>
 
@@ -256,6 +261,7 @@
 						<div class="col-md-3">
 							<a href="#kaiwa" class="btn btn-primary btn-round" style="width: 100%">日常英会話</a>
 							<a href="#business" class="btn btn-primary btn-round" style="width: 100%">ビジネス英会話</a>
+							<a href="#prep" class="btn btn-primary btn-round" style="width: 100%">海外赴任準備</a>
 						</div>
 						<!-- <div class="col-md-8 col-md-offset-1">
 							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
@@ -431,7 +437,7 @@
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/business-5.jpg" />
+											<img class="img img-raised" src="assets/img/examples/business-1.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
@@ -441,9 +447,40 @@
 										<p>
 											<strong>●一般ビジネス英語・英会話</strong><br> 将来、職場で英語を使って仕事をされたい方、または現在職場で日常的に英語を使用する方のためのプログラムです。初級から上級まで、レベルにあわせてシーン別のビジネス英会話を学びます。職場で英語は必要だが初心者の方には、簡単な文法で現在の職場で特に必要な表現から無理なく学んでいただけます。
 										</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="prep"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/business_prep.jpg" />
+										</div>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="#">海外赴任準備</a>
+										</h3>
 										<p>
-											<strong>●海外出張・赴任準備</strong><br>
-											<a href="#">海外赴任準備のページ</a>をご参照下さい。
+											これまで何らかの形で英語に関わって来た方は別として、英会話の経験がなく技術職や専門職、管理職等で海外に行く場合など、海外赴任の準備としての英会話は重要です。 ご本人の現在のレベルをチェックし、仕事の内容、赴任期間、赴任先等の細かい情報を伺って出発までに日本でしておくべきことを目でみてわかるように提案させていただきます。行くことが決まっているならやるしかないです。
+										</p>
+										<p>
+											聞き流すだけではしゃべれるようにはなりません。もちろんリスニング力を高めることは重要ですので、そのトレーニングも行いますが、日本人にとってもっと大事なことは心理的な壁を取り払うことです。とにかく私達はノンネイティブなのだから間違って当たり前だということを心に刻みつけて、コンプレックスを持たずに話すことが重要になって来ます。
+											サンミハールではこの壁を取り払うためのフリーカンバセーションクラスのレッスンをプライベートレッスン(マンツーマン)受講の方に無料でプレゼントしています。
+										</p>
+										<h4>レッスン内容の例</h4>
+										<p>
+											★ 英語初心者の方・・・簡単な表現で出来る限り多くの状況設定をして、会話パターンの練習<br>
+											★ 中級以上の方・・・仕事内容に合わせたケーススタディでの会話練習
+										</p>
+										<p>海外赴任者の奥様、ご家族の皆様向けのレッスンも行っています。 サンミハールの教師は皆英語ネイティブですから、海外（日本）で生活しており、彼らにとって生徒さんの心情は非常に理解し易く、英語のみならず、海外で生活するための様々なアドバイスが出来ます
 										</p>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
 											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -451,6 +488,8 @@
 									</div>
 								</div>
 							</div>
+
+
 
 						</div>
 					</div>
