--- a/pricing.html
+++ b/pricing.html
@@ -150,8 +150,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
+								<a href="lesson-course-everyday.html">
+									海外赴任準備
 								</a>
 							</li>
 							<li>
@@ -170,7 +170,12 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-corporate.html">
 									英文校正サービス
 								</a>
 							</li>
@@ -458,29 +463,29 @@
 
 		<!--     *********     END PRICING TABLES     *********      -->
 
-		<!-- <hr /> -->
+		<hr />
 
 
 
-
-		<!-- <div class="container">
+		<!--     *********     FAQ     *********      -->
+		<div class="container">
 
 
 			<div class="features-2">
 				<div class="text-center">
-					<h3 class="title">Frequently Asked Questions</h3>
+					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
+					<h3 class="title">英会話Q&A</h3>
 				</div>
 				<div class="row">
 					<div class="col-md-4 col-md-offset-2">
 						<div class="info info-horizontal">
 							<div class="icon icon-info">
-								<i class="material-icons">card_membership</i>
+								<i class="material-icons">assignment</i>
 							</div>
 							<div class="description">
-								<h4 class="info-title">Can I choose different lesson packages?</h4>
+								<h4 class="info-title">Q.　初心者でも大丈夫ですか？</h4>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum rem quibusdam consectetur illo aspernatur
-									ab quasi quas sed, qui error doloribus nam, vero quae nemo cumque sapiente, odio alias reprehenderit.
+									A.　はい。大丈夫です。サンミハールには英語ネイティブのバイリンガル講師が在籍しています。また、もっと詳しく日本語で説明が聞きたい時は日本人スタッフが無料でサポートします。
 								</p>
 							</div>
 						</div>
@@ -490,14 +495,59 @@
 					<div class="col-md-4">
 						<div class="info info-horizontal">
 							<div class="icon icon-success">
-								<i class="material-icons">card_giftcard</i>
+								<i class="material-icons">assignment_turned_in</i>
 							</div>
 							<div class="description">
-								<h4 class="info-title">Is there any discount for purchasing more lessons?</h4>
+								<h4 class="info-title">Q.　当日突然行けなくなったらどうなりますか？</h4>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem facilis in sapiente dolor eos. Iure
-									consequuntur, officiis quod commodi soluta iste a qui, omnis neque dolores quidem facilis eius
-									beatae.
+									A.　急に来れなくなっても授業を受けられます。まずその日の違う時間に変更が出来ます。他の時間が難しくてもその場所からお電話やWEBでもレッスンが出来ます。
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 col-md-offset-2">
+						<div class="info info-horizontal">
+							<div class="icon icon-info">
+								<i class="material-icons">description</i>
+							</div>
+							<div class="description">
+								<h4 class="info-title">Q.　どうすれば、英語を話せるようになりますか？</h4>
+								<p>
+									A.　その方の英語を話したいという欲求の度合いによって私の回答は様々です。でも本当に絶対、普通に英語が話せて外国人とコミュニケーションが出来て、あわよくば海外で働きたいと思っている方は続きを読んで下さい。趣味でいい方は読まないで下さいね。
+								</p>
+								<ol>
+									<li>英語が出来ない」と、呪文のように唱えるのをやめる。</li>
+									<li>英会話の優先順位を上げる。</li>
+									<li>自分が話せている姿を毎日想像して努力を続ける。</li>
+								</ol>
+								<p>要約すればこの３点です。</p>
+								<ol>
+									<li>は自分と他人への言い訳なので戦う前から負けを認めているようなものです。 無駄なので、やめて下さい。メンタルブロックがかかって脳がそう思い込んでしまい悪影響です。</li>
+									<li>「今日は忙しいので会社休むわ。」という人は少ないでしょう？　つまり自分の生活にとって重要なことはそんなに簡単にやめられないのです。その他、人間としてしなければいけないこと例えば食事や排泄。これらの生命活動や日本語での会話や仕事は非常に高い優先順位にあります。その次に大事なことを英語に出来るかどうかが上達の鍵を握っています。そして、決めたらその時間は必ずすることです。</li>
+									<li>はダイエットとよく似ていますが、毎日続けることが大事です。我流で成功する方 もおられますが、これだけダイエット補助食などが売れているのは、やはり効率的に また健康的にそして、定期的に行えるというメリットがあるからではないでしょうか？日本にいながら、英語を話せるようになるというのは、太る体質の方が、ダイ エットをして痩せることと似ています。つまり自然に逆らっているので、弛まぬ努力 が必要なのです。効率的に行いたい方はサンミハールに来て下さい。長い人生の中で
+										ほんの数年、楽しみながらこの努力を続ければ、自然に海外ドラマやニュースを英語で見たり、英字新聞を読めるようになってリバウンドすることなくレベルを保てるよ うな英語人生が送れるようになります。<br>
+										明日より若い今日の脳を最大限に活用されますよう。スクールでお待ちしております。
+									</li>
+								</ol>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="col-md-4">
+						<div class="info info-horizontal">
+							<div class="icon icon-success">
+								<i class="material-icons">feedback</i>
+							</div>
+							<div class="description">
+								<h4 class="info-title">Q.　自分で文章を作るのが大変です。辞書では、しっくり来る訳がないことも多いし。</h4>
+								<p>
+									A.　単語をそのまま訳すととんでもない文章になることがありますね。例えば友達と電話で話していて「いまからそっちに行くわ。」は、"I'm going there from now." ではなく、"I'm coming there from
+									now."です。「go＝行く」と覚えたのに答は反対の"come"です。"come"を辞書でひくと「〈人・動物・車などが〉〈話し手のほうへ〉（やって）来る；〈聞き手のほうへ〉行く」と書かれているのですが、「行く」という日本語を和英辞典で調べても"go",
+									"leave"などの単語はすぐに出てくるのですが、"come"はずっと下のほうに書かれています。独学で完全な文章を作るとなると、辞書を端から端まで読んで、尚且つ文法書と確かめながら作っていく作業が少なからず必要ですし、それでもなかなかネイティブのような発想の完全な文章を作るのは難しいです。サンミハールでは日本語から英語ではなくて英単語の持つ本来のニュアンスを覚えて使っていただけるよう、たくさんの例文を使って単語を理解することをお勧めしています。辞書を書かれた先生方は限られたスペースに一語を選ぶという究極の選択をして書かれています。文法書もしかり。辞書で書ききれていないニュアンスは、語学のプロ、サンミハールの教師に聞くのが早くて賢い方法です。
+									ちなみに"come"は話し手と聞き手が近づき、"go"は離れるというニュアンスで覚えるとまちがえにくくなりますよ。
 								</p>
 							</div>
 						</div>
@@ -507,14 +557,12 @@
 					<div class="col-md-4 col-md-offset-2">
 						<div class="info info-horizontal">
 							<div class="icon icon-success">
-								<i class="material-icons">attach_money</i>
+								<i class="material-icons">check_circle</i>
 							</div>
 							<div class="description">
-								<h4 class="info-title">Which payment methods do you take?</h4>
+								<h4 class="info-title">Q.　聞き取りが出来るようになりたいのですが。</h4>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti consequuntur facilis dolore quod,
-									nesciunt nobis temporibus neque cum, animi architecto quae est saepe amet hic soluta in natus
-									maxime dolores!
+									A.　いっぱい聞いてもなかなか聞き取りが出来ない方は、DICTATION＝聞き取り＋書き取りの練習をやってみてはいかがでしょうか？自分の聞けないところが目で見て分かります。今はインターネットでも無料の教材がたくさんあるので、利用されたら良いと思います。細かいカウンセリングはスクールでしています。ご遠慮なくお尋ね下さいね。
 								</p>
 							</div>
 						</div>
@@ -523,8 +571,8 @@
 
 					<div class="col-md-4">
 						<div class="info info-horizontal">
-							<div class="icon icon-blue">
-								<i class="material-icons">question_answer</i>
+							<div class="icon icon-danger">
+								<i class="material-icons">help</i>
 							</div>
 							<div class="description">
 								<h4 class="info-title">Any other questions we can answer?</h4>
@@ -536,8 +584,10 @@
 				</div>
 			</div>
 
-		</div> -->
+		</div>
 		<!-- container -->
+
+		<!--     *********     END FAQ     *********      -->
 
 		<hr>
 
