--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 </a>
               </li>
               <li>
-                <a href="lesson-course-corporate.html">
-                  法人向け英語研修
+                <a href="lesson-course-everyday.html">
+                  海外赴任準備
                 </a>
               </li>
               <li>
@@ -195,7 +195,12 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-corporate.html">
+                  法人向け英語研修
+                </a>
+              </li>
+              <li>
+                <a href="lesson-course-corporate.html">
                   英文校正サービス
                 </a>
               </li>
