--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -155,8 +155,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
+								<a href="lesson-course-everyday.html">
+									海外赴任準備
 								</a>
 							</li>
 							<li>
@@ -174,57 +174,61 @@
 									医療英会話
 								</a>
 							</li>
+							<li>
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-corporate.html">
+									英文校正サービス
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									海外赴任準備
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-airline.html">
+									航空英語・ICAO対策
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									留学準備
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									帰国子女
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									子供英会話
+								</a>
+							</li>
+						</ul>
 					</li>
-					<li>
-						<a href="#">
-							英文校正サービス
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							海外赴任準備
-						</a>
-					</li>
-					<li>
-						<a href="lesson-course-airline.html">
-							航空英語・ICAO対策
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							留学準備
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							帰国子女
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							子供英会話
-						</a>
-					</li>
-				</ul>
-				</li>
 
-				<li>
-					<a href="pricing.html">
-						料金と時間割
-					</a>
-				</li>
+					<li>
+						<a href="pricing.html">
+							料金と時間割
+						</a>
+					</li>
 
-				<li>
-					<a href="about.html">
-						About
-					</a>
-				</li>
+					<li>
+						<a href="about.html">
+							About
+						</a>
+					</li>
 
-				<li>
-					<a href="index.html#contactus">
-						お問い合わせ
-					</a>
-				</li>
+					<li>
+						<a href="index.html#contactus">
+							お問い合わせ
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
