--- a/lesson-course-toeic.html
+++ b/lesson-course-toeic.html
@@ -150,8 +150,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
+								<a href="lesson-course-everyday.html">
+									海外赴任準備
 								</a>
 							</li>
 							<li>
@@ -170,7 +170,12 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
+								<a href="lesson-course-corporate.html">
 									英文校正サービス
 								</a>
 							</li>
