Footer copyright info updated across all pages.

--- a/lesson-course-toeic.html
+++ b/lesson-course-toeic.html
@@ -777,7 +777,7 @@
 				&copy;
 				<script>
 					document.write(new Date().getFullYear())
-				</script>, made with
+				</script> | Sun Mihall Language Services. Made with
 				<i class="fa fa-heart heart"> by
 					<a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
 				</i>
