Footer copyright re-edited.

--- a/pricing.html
+++ b/pricing.html
@@ -695,8 +695,8 @@
 				&copy;
 				<script>
 					document.write(new Date().getFullYear())
-				</script> | Sun Mihall Language Services. Made with
-				<i class="fa fa-heart heart"> by
+				</script> All Rights Reserved | Sun Mihall Language Services. <strong>Made with</strong>
+				<i class="fa fa-heart heart"> <strong>by</strong>
 					<a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
 				</i>
 			</div>
