--- a/lesson-course-travel.html
+++ b/lesson-course-travel.html
@@ -22,7 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="医療英会話・病院の英語なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。医師、看護師、薬剤師、病院受付業務、製薬会社勤務の方々の英語。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
+	<meta name="Description" content="留学準備なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。ホームステイ先の選択もお手伝いします。帰国子女や子供、中高生の英会話も。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -32,7 +32,7 @@
 	<meta name="title" content="サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス">
 
 
-	<title>神戸英会話なら三宮のサンミハール｜医療英会話・病院の英語</title>
+	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -224,12 +224,15 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/medi-1.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/study-2.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">医療英会話（病院の英語）</h1>
+					<h1 class="title">留学準備</h1>
+					<h1 class="title">
+						帰国子女・子供英会話
+					</h1>
 				</div>
 			</div>
 		</div>
@@ -237,30 +240,38 @@
 
 	<div class="main main-raised">
 
-		<!--     *********     SUMMARY     *********      -->
+		<!--     *********     SUMMARY      *********      -->
 
 		<div class="cd-section" id="features">
+
 			<div class="container">
 
 				<div class="features-2">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">医療英会話・メディカルの英語</h2>
+							<h2 class="title">留学準備</h2>
+							<h2 class="title">帰国子女・子供英会話</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#doctor" class="btn btn-primary btn-round" style="width: 100%">ドクター（医者・医師）の英会話</a>
-							<a href="#nurse" class="btn btn-primary btn-round" style="width: 100%">看護師の英会話</a>
+							<a href="#abroad" class="btn btn-primary btn-round" style="width: 100%">留学準備</a>
+							<a href="#returnee" class="btn btn-primary btn-round" style="width: 100%">帰国子女の英語</a>
+							<a href="#kida" class="btn btn-primary btn-round" style="width: 100%">子供英会話</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>1981年の開校当時からドクターのレッスンは三宮のサンミハールと口コミで広がり、医師、看護師、薬剤師、病院受付等、 多くの医療従事者の方が来られています。また神戸市は「神戸医療産業都市」を推進しており、今後益々海外からの医療関連企業の進出も考えられ医療従事者の英語は必須となって来ています。
+							<!-- <h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br> ★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br> ③
+								料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
 							</h5>
-							<div class="col-sm-12 text-center" style="margin-top: 30px;">
+							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br> TOEIC
+								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
+								<br> ◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
+							</h5> -->
+							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-							</div>
+							</div> -->
 						</div>
 					</div>
 
@@ -324,8 +335,11 @@
 
 				</div>
 
+
+
 			</div>
 			<!-- container -->
+
 		</div>
 
 		<!--     *********    END SUMMARY     *********      -->
@@ -333,51 +347,65 @@
 		<hr>
 
 
-		<!--     *********     EVERYDAY LESSONS     *********      -->
+		<!--     *********     TOEIC EIKEN TOEFL IELTS      *********      -->
 
 		<div class="cd-section" id="blogs">
+
 			<div class="blogs-3">
 
 				<div class="container">
 					<div class="row">
 
 						<div class="col-md-10 col-md-offset-1">
-							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">医療英会話・メディカルの英語コース</h2>
+							<h2 class="title">留学準備 帰国子女・子供英会話コース</h2>
 
 							<br />
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="doctor"></div>
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="abroad"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/medi-2.jpg" />
+											<img class="img img-raised" src="assets/img/examples/campus.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">ドクター（医者・医師）の英会話</a>
+											<a href="#">留学準備</a>
 										</h3>
+										<p>
+											留学する方の年齢、目的によって日本で準備すべき内容が変わってきます。サンミハールではおひとりおひとりの年齢、目的に合わせてオーダーメイドで学習する内容を一緒に作り、来る日に備えます。</p>
 										<ul>
 											<li>
-												<h4>院内での外国人患者との会話</h4>
-												<p>教師と問診から疾患・症状別の説明までロールプレイで行います。</p>
+												<h4>語学留学</h4>
+												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br>
+													★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>
+													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br>
+													★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>
+													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br>
+													★ 渡航先の文化や慣習について<br>
+													★ 日本文化について
+												</p>
 											</li>
 											<li>
-												<h4>海外の病院での研修準備</h4>
-												<p>日常会話から院内での様々な状況での会話までロールプレイで行います。</p>
+												<h4>語学留学</h4>
+												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br>
+													★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>
+													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br>
+													★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>
+													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br>
+													★ 渡航先の文化や慣習について<br>
+													★ 日本文化について
+												</p>
 											</li>
 											<li>
-												<h4>USMLE（United States Medical Licensing Examination）＝米国医師国家試験STEP2CS面接対策</h4>
-												<p>多くの医療従事者の方々のご意見や現場の声、また米国医師国家試験に実際に合格された医師である方々の経験を元にカリキュラムを組んでいます。</p>
+												<h4>海外の大学・大学院留学</h4>
+												<p>上記の語学留学の内容に加えて、TOEFL・ IELTSの対策を行います。TOEFL・ IELTSで入学基準を満たしている方は、大学での授業の受け方、レポートの書き方など、よりアカデミックな内容を学びます。<br>
+													<a href="lesson-course-toeic"></a>→ TOEFL・IELTS対策のページ </a>
+												</p>
 											</li>
 											<li>
-												<h4>海外赴任準備</h4>
-												<p>海外赴任は本人だけでなく、家族にとっても大きな負担がかかります。本人はもちろんのこと、ご家族の方が安心して、出発出来るよう英語だけでなく海外の慣習や海外で出来ることなどを経験豊かなサンミハールの教師から学ぶことが出来ます。</p>
-											</li>
-											<li>
-												<h4>学会発表準備</h4>
-												<p>研究結果の発表はスラスラと出来ても、質疑応答になるとなかなかうまくいきません。ご自分の発表する内容を考えるだけで精いっぱいという方も多いでしょう。ぜひサンミハールの授業で、様々な質疑応答の仕方を実践で学んで下さい。通うお時間のない方はWEBレッスンでも出来ます。メールで送っていただいたドキュメントファイルをスクリーンで見ながら、プレゼンから質疑応答まで納得いくまでネイティブと練習出来ます。</p>
+												<h4>留学先の選定</h4>
+												<p>留学先を決めるには情報の収集が欠かせません。出発時の会話力の到達レベルと予算、そして留学の目的をはっきりさせておくことが大事です。もちろんそのお手伝い は無料で出来ます。 また、安心して語学留学したい方、ホームステイしたい方には、海外在住のサンミハールの元教師や、スタッフ、友人が経営する良心価格のホームステイ先や大学斡旋会社を無料でご紹介致します。</p>
 											</li>
 										</ul>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
@@ -389,38 +417,34 @@
 
 							<hr class="hr-dark-blue">
 
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="nurse"></div>
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="returnee"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/medi-4.jpg" />
+											<img class="img img-raised" src="assets/img/examples/returnee.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">看護師の英会話</a>
+											<a href="#">帰国子女の英語</a>
 										</h3>
+										<p>
+											子供のころに海外で身につけた英語力を帰国後、保持することは結構大変です。せっかくの財産を見す見す無駄にしたくない。日本の学校に通いながら、英会話力を保持するためにはサンミハールのような実績のある英会話スクールに通わせるのもひとつの方法です。よくある年齢でクラス分けされた子供英会話ではなくプライベートレッスン（マンツーマン）もしくは兄弟姉妹でのセミプライベートレッスンなど個々の状況に応じて、学ぶ内容を変えられるサンミハールのレッスンは帰国子女の英語力の保持に適していると言えます。
+										</p>
 										<ul>
 											<li>
-												<ul>
-													<li>院内での外国人患者との会話</li>
-													<li>海外の病院での研修準備</li>
-													<li>イギリス、ニュージーランド、オーストラリアで登録制度を利用して、海外で看護師として働くための準備</li>
-												</ul>
-											</li>
-											<li>
-												<h4>薬剤師の英会話</h4>
-												<p>実際の処方箋、医薬品の説明書等を使用して、患者への説明を英語で出来るようトレーニングします。</p>
-											</li>
-											<li>
-												<h4>病院受付業務の英会話</h4>
-												<p>一般的な受付から会計、保険、処方箋窓口業務など、実際の現場に即した会話をロールプレイで学びます。</p>
-											</li>
-											<li>
-												<h4>製薬会社等、外資系医療関連企業で働く方々の英会話</h4>
+												<h4>特色</h4>
 												<p>
-													<a href="lesson-course-everyday" target="_blank">ビジネス英会話のページをご覧下さい。</a>
+													サンミハールのレッスンでは本人が飽きずに楽しんで出来ることを教師、スタッフとご家族皆さんで話し合って決めることが出来ます。
+												</p>
+											</li>
+											<li>
+												<h4>レッスン内容の例</h4>
+												<p>
+													★ 海外の学校で習っていた教科書を使ってその続きの勉強<br>
+													★ 会話力のみの保持を目的とした日常英会話のレッスン<br>
+													★ 将来の海外進学を視野に入れての読み書きの授業
 												</p>
 											</li>
 										</ul>
@@ -431,24 +455,84 @@
 								</div>
 							</div>
 
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="kids"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/子供英会話三宮.jpg" alt="子供英会話三宮" />
+										</div>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="#">子供英会話</a>
+										</h3>
+										<p>
+											<strong>
+												英語の習得は早ければ早い程良いと言われていますが、例えば２歳から２年間英会話スクールに通っても、幼稚園で友達との遊びや他の習い事に興味を持ち始めやめてしまうパターンが多いのが現状です。
+											</strong>
+										</p>
+										<p>
+											<strong>
+												幼児期は物事の吸収は早いですが、他に興味が移ってしまえば忘れるのも早いです。語学力は継続によって維持されますから子供達のモチベーションをキープし、次のステップへつなげていくことが大切です。サンミハールでは日本語の読み書きがある程度出来るようになった小学校高学年から英会話のレッスンを始め、中学英語に繋げることを推奨しています。小学４年、５年生で楽しく英会話をすることを学び、６年生で中学英語を会話ベースで学びます。中学校で優秀な成績を修めることで英会話だけでなく読み書き文法を含んだ英語を学ぶ楽しみを覚え高校留学または大学留学へと繋がっていった卒業生の方がたくさんいます。
+											</strong>
+										</p>
+										<ul>
+											<li>
+												<h4>特色</h4>
+												<p>プライベートレッスン（マンツーマン）、または兄弟姉妹、お友達とのセミプライベートレッスンで、子供の能力に合わせて無理なく楽しく学べます。</p>
+											</li>
+											<li>
+												<h4>レッスン内容の例</h4>
+												<p>
+													★ ピクチャーディクショナリーを使用した単語やフレーズの練習<br>
+													★ フォニックスや発音記号を使った読み方、綴り方の練習<br>
+													★ 子供向け日常英会話のテキストを使った会話練習<br>
+													★ 今流行っているゲームの登場人物を使ってのロールプレイ練習<br>
+													★ 英語の歌詞の練習<br>
+													★ 中学校の英語の教科書をもとにした会話の練習<br>
+													★ 受験に向けての対策や文法等、英語全般のレッスン
+												</p>
+												<p>神戸三宮で子供英会話をと思われたなら、子供達の個性を重視してマンツーマンで学べるサンミハールへ。中高生の英語試験対策、受験英語対策もお任せください。</p>
+											</li>
+											<li>TOEFL （トフル）リスニング対策</li>
+											<li>TOEFL （トフル）スピーキング対策</li>
+											<li>TOEFL （トフル）ライティング（作文）対策</li>
+											<li>TOEFL （トフル）パソコン対策</li>
+										</ul>
+										<p>の６つの対策を個人のレベル、必要性に合わせてカリキュラムを組み計画的に学んでいきます。 例えば、
+											<br> スピーキングのトレーニング
+											<br> Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br> Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br> など。
+										</p>
+										<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br>
+											サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
+											listに載るオールAの成績を収めることが出来た。など多数。
+										</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
 						</div>
 
 					</div>
-
 				</div>
 				<!-- container -->
 
 			</div>
 		</div>
 
-		<!--     *********     END EVERYDAY LESSONS     *********      -->
+		<!--     *********     END TOEIC EIKEN TOEFL IELTS      *********      -->
 
 
 
 		<!--     *********    PRICING    *********      -->
 
 		<div class="cd-section" id="pricing">
-
 			<div class="pricing-5 section-gray" id="pricing-5 lessons">
 
 				<div class="container">
@@ -613,11 +697,11 @@
 			</div>
 		</div>
 
-		<!--     *********    END PRICING    *********      -->
+		<!--     *********    END PRICING     *********      -->
 
 		<!-- <hr> -->
 
-		<!--     *********    CONTACT US    *********      -->
+		<!--     *********    CONTACT US     *********      -->
 
 		<div class="container" id="contactus">
 
@@ -696,10 +780,11 @@
 		</div>
 		<!-- container -->
 
-		<!--     *********    END CONTACT US    *********      -->
+		<!--     *********    END CONTACT US     *********      -->
 
 	</div>
 	<!-- main main-raised -->
+
 
 	<footer class="footer">
 		<div class="container">
