--- a/about.html
+++ b/about.html
@@ -108,14 +108,9 @@
 							</li>
 							<li>
 								<a href="index.html#testimonials">
-									生徒の声
+									生徒さんの声
 								</a>
 							</li>
-							<!-- <li>
-								<a href="index.html#events">
-									イベント
-								</a>
-							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -188,17 +183,17 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									留学準備
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									帰国子女
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									子供英会話
 								</a>
 							</li>
