--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -22,7 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！ />
+	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -110,7 +110,7 @@
 							</li>
 							<li>
 								<a href="index.html#testimonials">
-									生徒の声
+									生徒さんの声
 								</a>
 							</li>
 							<li>
@@ -180,27 +180,22 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									海外赴任準備
-								</a>
-							</li>
-							<li>
 								<a href="lesson-course-airline.html">
 									航空英語・ICAO対策
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									留学準備
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									帰国子女
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									子供英会話
 								</a>
 							</li>
