--- a/lesson-course.html
+++ b/lesson-course.html
@@ -110,7 +110,7 @@
 							</li>
 							<li>
 								<a href="index.html#testimonials">
-									生徒の声
+									生徒さんの声
 								</a>
 							</li>
 							<li>
@@ -180,27 +180,22 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
-									海外赴任準備
-								</a>
-							</li>
-							<li>
 								<a href="lesson-course-airline.html">
 									航空英語・ICAO対策
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									留学準備
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									帰国子女
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-travel.html">
 									子供英会話
 								</a>
 							</li>
