Christmas campaign updated.

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           <div class="row">
 
             <div class="col-md-5 col-md-offset-1">
-              <div class="card card-no-shadow-background" style="background-image: url('assets/img/examples/card-project2.jpg')">
+              <div class="card card-no-shadow-background" style="background-image: url('assets/img/examples/2018-xmas.jpg')">
                 <div class="card-content">
 
                 </div>
@@ -389,9 +389,10 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title">11月新入会者限定！入会金割引キャンペーン</h4>
-                  <p class="text-dark-gray">
-                    11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！<br> （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
+                  <h4 class="info-title text-left">11月新入会者限定！入会金割引キャンペーン</h4>
+                  <p class="text-dark-gray  text-left">
+                    11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！
+                    （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
                   </p>
                 </div>
               </div>
@@ -401,10 +402,13 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title">お友達ご紹介キャンペーン</h4>
-                  <p class="text-dark-gray">
-                    サンミハールの会員の方からのご紹介で神戸三宮のサンミハールに入会されると以下の特典が受けられます。<br> お友達は入会金30％OFF！
-                    <br> 貴方には\3,000分英会話クーポンをプレゼント！
+                  <h4 class="info-title text-left">クリスマスキャンペーン</h4>
+                  <p class="text-dark-gray  text-left">
+                    期間2018年11月15日から12月末日まで<br>
+                    お得な40レッスン以上のチケットをご購入されるとプレゼントがついて更にお得になるキャンペーンです。<br>
+                    ★プライベート40レッスンご購入でプライベート１レッスンプレゼント<br>
+                    ★プライベート60レッスンご購入でプライベート2レッスンプレゼント<br><br>
+                    他、詳しくはスクールにお問合せください。
                   </p>
                 </div>
               </div>
