contact form message field updated.

--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -729,7 +729,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-								<label class="control-label">お問い合わせ内容</label>
+								<label class="control-label">お問い合わせ内容<br>例】本日夜8時以降　土日いつでも電話OK</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
