--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
                   </div>
                 </div>
                 <div class="form-group label-floating">
-                  <label class="control-label">お問い合わせ内容</label>
+                  <label class="control-label">お問い合わせ内容<br>例】本日夜8時以降　土日いつでも電話OK</label>
                   <textarea name="message" class="form-control" id="message" rows="6" required></textarea>
                 </div>
 
